# AI-Multi-Agent-Workflow

./: .dockerignore  .env  Dockerfile  QUERY-8.md  Query_1.md  Query_2.md  Query_3.md  Query_4.md  Query_5.md  Query_6.md  Query_7.md  README.md  main.py  pyproject.toml  requirements.txt  test.py
agents/: graph.py  tools.py
static/: index.html
